welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:3: error: illegal start of simple pattern
for ( )
      ^SlugTracking:17: error: illegal start of simple expression
}        
^